--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,34 +1,95 @@
-
+@import "utilities";
+@import "config";
+@import "_btnConfig";
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+ }
 
 body {
   background-color: $light-color;
   font-family: $font-stack;
-  line-height: 1;
+  // line-height: 1;
 }
 
-img {
-  border-radius: 50%;
-}
+// img {
+//   // border-radius: 50%;
+// }
 
 a {
   text-decoration: none;
 }
 
+
 .hero {
-  // This is where the bulk of the SCSS styling needs to be done
+  background-color: black;
+  width: 100%;
 
-  // Take a look at the other files we've built already. How can they be useful here?
+  .box {
+    width: 100%; 
+    padding: 20px;
 
-  // Also, take time to review the features of SCSS we've already covered:
-  // 1. $variables
-  // 2. nesting (dont forget about the ampersand (&) parent selector!)
-  // 3. At-Rules
+    .navigation {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: $text-color;
+      ul {
+        li a {
+          color: $text-color;
+        }
+      }
+
+      .banner {
+        font-size: 1.5em;
+      }
+
+      ul {
+        list-style-type: none;
+        display: flex;
+        gap: 1rem;
+
+        li {
+          color: $text-color;
+        }
+      }
+    }
+
+    .hero-content {
+      width: 100%; /* Ensure the content takes up the full width */
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: $text-color;
+
+      h1 {
+        font-size: 5em;
+        width: 10em;
+        padding: .5em;
+      }
+      .btn-primary {
+        @extend %btn;
+      }
+      .btn-secondary {
+        @extend %btn;
+      }
+      img {
+        border-radius: 50%;
+        height: 520px;
+        width: 520px;
+      }
+    }
+  }
 }
+
+
+
+
+
+
+
+
 
 // This code is related to some of the aspects of SCSS we have yet to cover.
 // While you don't have to mess with it, it would be advisable to attempt to understand its functionality.
@@ -49,3 +110,7 @@ $spaceamounts: (1,2,3,4,5);
     padding: #{$space}rem 0;
   }
 }
+
+
+
+
